UMA dissector incorrectly passes MAC addresses to wireshark core
This issue was migrated from bug 7476 in our old bug tracker.
Original bug information:
Reporter: Harald Welte
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: Git
Attachments:
0001-UMA-fix-parsing-of-IEEE-MAC-address-as-radio-identit.patch: patch to fix the issue
uma-register_with_mac_addr.pcap: pcap file to trigger the problem