From Harald Welte via https://bugs.wireshark.org/bugzilla/show_bug.cgi?id=7476 : UMA dissector incorrectly passes MAC addresses to wireshark core

svn path=/trunk/; revision=43692